--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpaceBook - Premium Workspace Booking Platform</title>
+    <title>GigSpace - Premium Workspace Booking Platform</title>
     <meta name="description" content="Book premium office spaces, coworking desks, and meeting rooms. Flexible, affordable workspace solutions for professionals and teams." />
     <meta name="keywords" content="office space, coworking, meeting rooms, workspace booking, office rental, business space" />
-    <meta name="author" content="SpaceBook" />
+    <meta name="author" content="GigSpace" />
 
-    <meta property="og:title" content="SpaceBook - Premium Workspace Booking Platform" />
+    <meta property="og:title" content="GigSpace - Premium Workspace Booking Platform" />
     <meta property="og:description" content="Book premium office spaces, coworking desks, and meeting rooms. Flexible, affordable workspace solutions for professionals and teams." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/hero-workspace.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@gigspace" />
+    <meta name="twitter:image" content="/src/assets/hero-workspace.jpg" />
   </head>
 
   <body>
